# dota2-timer

./: .gitignore  Program.cs  README.md  dota2-timer.csproj  dota2-timer.sln  gamestate_integration_dota.cfg  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release.yml  main.yml  test.yml
Properties/: AssemblyInfo.cs
coverage/: clover.xml  index.html
src/: App.svelte  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Dota-gsi.svelte  dota.gsi.spec.ts  stores.js  timer-list-item.svelte  timer-list.svelte
src/ui/: Footer.svelte  Header.svelte  Sidebar.svelte
src/util/: time-formatting.js  types.ts
