[package]
name = "dota2-timer"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "^0.1.58"
dota-gsi = "0.1.1"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sysinfo = "0.29.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
